--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,9 +16,9 @@
         <td><%=details.username%></td>
         <td><%=details.email%></td>
         <td><%=details.password%></td>
-        <td><%= link_to "edit", edit_user_path(details)%></td>
-        <td><%= link_to "show", user_path(details)%></td>
-        <td><%= link_to "delet", user_path(details), method: :delete, data: {confirm: "Are you sure.."}%></td>
+        <td><%= link_to "Edit", edit_user_path(details)%></td>
+        <td><%= link_to "Show", user_path(details)%></td>
+        <td><%= link_to "Delete", user_path(details), method: :delete, data: {confirm: "Are you sure.."}%></td>
         
     </tr>
     
